# template

./: .clang-format  .gitignore  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
app/: CMakeLists.txt  demo.cpp
inc/: dummy.h
inc/utils/: rand.h  timer.h
src/: CMakeLists.txt  dummy.cpp
test/: CMakeLists.txt  test_demo.cpp
